# clique

./: .gitignore  LICENSE  clique.cabal
src/: Main.hs
