name:                clique
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Daniel Collins
maintainer:          mail@dcollins.info
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable clique
  main-is:             Main.hs
  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind -threaded
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
